--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "url-loader": "^1.0.1",
     "webpack": "^4.6.0",
     "webpack-stream": "^4.0.3"
+  },
+  "dependencies": {
+    "dot-object": "^1.7.0"
   }
 }
