--- a/src/manifest.json
+++ b/src/manifest.json
@@ -24,5 +24,6 @@
   ],
   "web_accessible_resources": [
     "injects.js"
-  ]
+  ],
+  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
 }
