--- a/package.json
+++ b/package.json
@@ -16,15 +16,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dragonjet/hiori.git"
+    "url": "git+https://github.com/shinycolors/hiori.git"
   },
-  "keywords": [],
-  "author": "",
+  "author": "github.com/shinycolors",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/dragonjet/hiori/issues"
+    "url": "https://github.com/shinycolors/hiori/issues"
   },
-  "homepage": "https://github.com/dragonjet/hiori#readme",
+  "homepage": "https://github.com/shinycolors/hiori#readme",
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
