--- a/src/manifest.json
+++ b/src/manifest.json
@@ -10,7 +10,10 @@
     "webRequestBlocking",
     "*://shinycolors.enza.fun/*"
   ],
-  "options_page": "html/options.html",
+  "options_ui": {
+    "open_in_tab": true,
+    "page": "html/options.html"
+  },
   "background": {
     "scripts": [
       "background.js"
